# End-LVM-data-collector

./: .gitignore  Cargo.toml  README.md
aggregator/src/: lib.rs
app/: Cargo.toml
app/src/: main.rs  pipeline.rs
capture/: Cargo.toml
capture/src/: lib.rs
compiler/src/: lib.rs
core/src/: lib.rs
gui/: Cargo.toml  tauri.conf.json
gui/src/: lib.rs  main.rs  tauri_commands.rs
input/: Cargo.toml
input/src/: lib.rs  polling.rs  rawinput.rs
writer/src/: lib.rs
