[package]
name = "input"
version = "0.1.0"
edition = "2024"

[dependencies]
collector_core = { path = "../core", package = "core" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
  "Win32_Foundation",
  "Win32_System_Performance",
  "Win32_System_Threading",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
